syntax = "proto3";

package authlayer.v1;

option go_package = "github.com/bernardoforcillo/authlayer/pkg/proto/authlayer/v1;authlayerv1";

import "authlayer/v1/common.proto";
import "authlayer/v1/rbac.proto";
import "google/protobuf/timestamp.proto";

// ServiceAccountService manages non-human identities (CI/CD pipelines, microservices, bots).
// Service accounts authenticate via API keys or JWT and participate in RBAC
// just like regular users. They belong to an organization and can be assigned roles.
service ServiceAccountService {
  rpc CreateServiceAccount(CreateServiceAccountRequest) returns (CreateServiceAccountResponse);
  rpc GetServiceAccount(GetServiceAccountRequest) returns (GetServiceAccountResponse);
  rpc UpdateServiceAccount(UpdateServiceAccountRequest) returns (UpdateServiceAccountResponse);
  rpc DeleteServiceAccount(DeleteServiceAccountRequest) returns (DeleteServiceAccountResponse);
  rpc ListServiceAccounts(ListServiceAccountsRequest) returns (ListServiceAccountsResponse);
  rpc CreateServiceAccountKey(CreateServiceAccountKeyRequest) returns (CreateServiceAccountKeyResponse);
  rpc RevokeServiceAccountKey(RevokeServiceAccountKeyRequest) returns (RevokeServiceAccountKeyResponse);
  rpc ListServiceAccountKeys(ListServiceAccountKeysRequest) returns (ListServiceAccountKeysResponse);
  rpc AssignRole(AssignServiceAccountRoleRequest) returns (AssignServiceAccountRoleResponse);
  rpc RevokeRole(RevokeServiceAccountRoleRequest) returns (RevokeServiceAccountRoleResponse);
}

enum ServiceAccountStatus {
  SERVICE_ACCOUNT_STATUS_UNSPECIFIED = 0;
  SERVICE_ACCOUNT_STATUS_ACTIVE = 1;
  SERVICE_ACCOUNT_STATUS_DISABLED = 2;
}

message ServiceAccountInfo {
  string id = 1;
  string display_name = 2;
  string description = 3;
  string org_id = 4;
  string created_by = 5;
  ServiceAccountStatus status = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
  optional google.protobuf.Timestamp last_authenticated_at = 9;
  repeated RoleInfo roles = 10;
}

message ServiceAccountKeyInfo {
  string id = 1;
  string service_account_id = 2;
  string key_prefix = 3;
  string name = 4;
  google.protobuf.Timestamp created_at = 5;
  optional google.protobuf.Timestamp expires_at = 6;
  optional google.protobuf.Timestamp last_used_at = 7;
  bool revoked = 8;
}

message CreateServiceAccountRequest {
  string display_name = 1;
  string description = 2;
  string org_id = 3;
}

message CreateServiceAccountResponse {
  ServiceAccountInfo service_account = 1;
}

message GetServiceAccountRequest {
  string service_account_id = 1;
}

message GetServiceAccountResponse {
  ServiceAccountInfo service_account = 1;
}

message UpdateServiceAccountRequest {
  string service_account_id = 1;
  optional string display_name = 2;
  optional string description = 3;
  optional ServiceAccountStatus status = 4;
}

message UpdateServiceAccountResponse {
  ServiceAccountInfo service_account = 1;
}

message DeleteServiceAccountRequest {
  string service_account_id = 1;
}

message DeleteServiceAccountResponse {}

message ListServiceAccountsRequest {
  string org_id = 1;
  PaginationRequest pagination = 2;
}

message ListServiceAccountsResponse {
  repeated ServiceAccountInfo service_accounts = 1;
  PaginationResponse pagination = 2;
}

message CreateServiceAccountKeyRequest {
  string service_account_id = 1;
  string name = 2;
  optional google.protobuf.Timestamp expires_at = 3;
}

message CreateServiceAccountKeyResponse {
  ServiceAccountKeyInfo key_info = 1;
  string plain_text_key = 2;
}

message RevokeServiceAccountKeyRequest {
  string key_id = 1;
}

message RevokeServiceAccountKeyResponse {}

message ListServiceAccountKeysRequest {
  string service_account_id = 1;
  PaginationRequest pagination = 2;
}

message ListServiceAccountKeysResponse {
  repeated ServiceAccountKeyInfo keys = 1;
  PaginationResponse pagination = 2;
}

message AssignServiceAccountRoleRequest {
  string service_account_id = 1;
  string role_id = 2;
  string org_id = 3;
}

message AssignServiceAccountRoleResponse {}

message RevokeServiceAccountRoleRequest {
  string service_account_id = 1;
  string role_id = 2;
  string org_id = 3;
}

message RevokeServiceAccountRoleResponse {}
